<resources>
    <string name="app_name">NoteMe</string>
    <string name="home_page_label"> Home </string>
    <string name="search_box_hint"> Enter your search query </string>


    <string name="new_note_label"> New Note </string>
    <string name="save_note_button"> Save Note </string>
    <string name="title_hint"> Title </string>
    <string name="subtitle_hint"> Subtitle </string>
    <string name="text_field_hint"> Type notes here... </string>
    <string name="back_button"> Back </string>


</resources>