<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewNote">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="110dp"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.748"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/tvNewNotePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/new_note_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName" />

    <EditText
        android:id="@+id/etNoteTitle"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/title_hint"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNewNotePage"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/etNoteSubtitle"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/subtitle_hint"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNoteTitle"
        tools:ignore="Autofill" />



    <androidx.cardview.widget.CardView
        android:id="@+id/cvDescription"
        android:layout_width="365dp"
        android:layout_height="200dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNoteSubtitle">

        <EditText
            android:id="@+id/etNoteDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/text_field_hint"
            android:inputType="textMultiLine" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnPickColor"
        android:layout_width="83dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:text="Color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvDescription"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDeleteNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/etNoteTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toEndOf="@+id/tvAppName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabUploadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/ivImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toEndOf="@+id/fabCapturePhoto"
        app:layout_constraintTop_toBottomOf="@+id/cvDescription"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_upload" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabCapturePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/ivImage"
        app:layout_constraintStart_toEndOf="@+id/btnPickColor"
        app:layout_constraintTop_toBottomOf="@+id/cvDescription"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <ImageView
        android:id="@+id/ivImageNoteViewer"
        android:layout_width="184dp"
        android:layout_height="101dp"
        android:layout_marginBottom="28dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toEndOf="@+id/fabBack"
        app:layout_constraintTop_toBottomOf="@+id/cvDescription"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPickColor"
        app:layout_constraintVertical_bias="0.678"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSaveNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/fabBack"
        app:layout_constraintEnd_toStartOf="@+id/btnPickColor"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvDescription"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_save" />

</androidx.constraintlayout.widget.ConstraintLayout>